[gd_scene load_steps=24 format=3 uid="uid://vk4q2twuqwu4"]

[ext_resource type="Script" uid="uid://kvwd8o0dlal4" path="res://ui_u/main buttons.gd" id="1_cf6vv"]
[ext_resource type="ArrayMesh" uid="uid://roq0tih33hp7" path="res://blueprints/3d/forth square.obj" id="1_gyd0g"]
[ext_resource type="Texture2D" uid="uid://bpai44w2b1pu0" path="res://tilemaps/furniture/Interactions/Orb de Teleport.png" id="1_hwibk"]
[ext_resource type="Script" uid="uid://bhqrt3752hdx0" path="res://ui_u/forth_square.gd" id="2_cpk7c"]
[ext_resource type="Theme" uid="uid://c71hbxb3vs4cr" path="res://ui_u/main menu.tres" id="2_kgyfl"]
[ext_resource type="Texture2D" uid="uid://ckrjpimm2np42" path="res://tilemaps/test2.png" id="3_n8o6b"]
[ext_resource type="ArrayMesh" uid="uid://c6h26xy37nvcu" path="res://blueprints/3d/untitled.obj" id="4_2pnkx"]
[ext_resource type="Script" uid="uid://c3gxkhvygcj35" path="res://ui_u/untitled.gd" id="5_hwibk"]
[ext_resource type="AudioStream" uid="uid://dfw7y8wmwjo1d" path="res://sounds/menu-sound.mp3" id="9_yg1ck"]
[ext_resource type="Texture2D" uid="uid://dvf8ylikfsfyv" path="res://tilemaps/title.png" id="11_eee13"]
[ext_resource type="Texture2D" uid="uid://c42sv1l4qjoma" path="res://tilemaps/dialogue.png" id="12_c6af1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6vv"]
atlas = ExtResource("1_hwibk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xh2l"]
atlas = ExtResource("1_hwibk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg1ck"]
atlas = ExtResource("1_hwibk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgyfl"]
atlas = ExtResource("1_hwibk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eee13"]
atlas = ExtResource("1_hwibk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6af1"]
atlas = ExtResource("1_hwibk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q4u3"]
atlas = ExtResource("1_hwibk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tbvj"]
atlas = ExtResource("1_hwibk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7fxnb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg1ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgyfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eee13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6af1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q4u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tbvj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Environment" id="Environment_n8o6b"]
background_mode = 1
background_color = Color(0.114897, 0.114897, 0.114897, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c6af1"]
emission_shape = 3
emission_box_extents = Vector3(5, 5, 5)
angle_min = 1.0728835e-05
angle_max = 500.00003
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
radial_velocity_min = -2.2351742e-05
radial_velocity_max = -2.2351742e-05
gravity = Vector3(0, 0, 0)
radial_accel_min = -2.2351742e-06
radial_accel_max = 99.99999

[sub_resource type="SphereMesh" id="SphereMesh_8q4u3"]

[node name="Node3D" type="Node3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_cf6vv")

[node name="ng" type="Button" parent="CanvasLayer"]
offset_left = -28.0
offset_top = 226.0
offset_right = 108.0
offset_bottom = 354.0
theme = ExtResource("2_kgyfl")
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/ng"]
position = Vector2(140, 58)
sprite_frames = SubResource("SpriteFrames_7fxnb")
autoplay = "default"
frame_progress = 0.0132149

[node name="Label" type="Label" parent="CanvasLayer/ng"]
layout_mode = 0
offset_left = 30.0
offset_top = 45.0
offset_right = 117.0
offset_bottom = 68.0
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="continue" type="Button" parent="CanvasLayer"]
offset_left = -25.0
offset_top = 318.0
offset_right = 103.0
offset_bottom = 446.0
theme = ExtResource("2_kgyfl")
metadata/_edit_use_anchors_ = true

[node name="cont" type="AnimatedSprite2D" parent="CanvasLayer/continue"]
position = Vector2(140, 55)
sprite_frames = SubResource("SpriteFrames_7fxnb")
autoplay = "default"
frame_progress = 0.672318

[node name="Label" type="Label" parent="CanvasLayer/continue"]
layout_mode = 0
offset_left = 26.0
offset_top = 47.0
offset_right = 113.0
offset_bottom = 70.0
text = "CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options" type="Button" parent="CanvasLayer"]
offset_left = -24.0
offset_top = 408.0
offset_right = 104.0
offset_bottom = 536.0
theme = ExtResource("2_kgyfl")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/options"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.22600001
anchor_top = 0.18
anchor_right = -0.22600001
anchor_bottom = 0.18
offset_left = 73.928
offset_top = 23.96
offset_right = 132.92801
offset_bottom = 46.96
text = "OPTIONS"

[node name="option" type="AnimatedSprite2D" parent="CanvasLayer/options"]
position = Vector2(140, 61)
sprite_frames = SubResource("SpriteFrames_7fxnb")
autoplay = "default"
frame_progress = 0.0132149

[node name="credits" type="Button" parent="CanvasLayer"]
offset_left = -24.0
offset_top = 505.0
offset_right = 161.0
offset_bottom = 633.0
theme = ExtResource("2_kgyfl")

[node name="cred" type="AnimatedSprite2D" parent="CanvasLayer/credits"]
position = Vector2(140, 57)
sprite_frames = SubResource("SpriteFrames_7fxnb")
autoplay = "default"
frame_progress = 0.845085

[node name="Label" type="Label" parent="CanvasLayer/credits"]
layout_mode = 0
offset_left = 32.0
offset_top = 45.0
offset_right = 119.0
offset_bottom = 68.0
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="exit" type="Button" parent="CanvasLayer"]
offset_left = -22.0
offset_top = 609.0
offset_right = 139.0
offset_bottom = 737.0
theme = ExtResource("2_kgyfl")

[node name="ex" type="AnimatedSprite2D" parent="CanvasLayer/exit"]
position = Vector2(140, 57)
sprite_frames = SubResource("SpriteFrames_7fxnb")
autoplay = "default"
frame_progress = 0.689352

[node name="Label" type="Label" parent="CanvasLayer/exit"]
layout_mode = 0
offset_left = 46.0
offset_top = 47.0
offset_right = 133.0
offset_bottom = 70.0
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Opitions" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(639, 361)
scale = Vector2(40, 40)
texture = ExtResource("12_c6af1")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Opitions"]
offset_left = -1.3751221
offset_top = -6.82502
offset_right = 63.624878
offset_bottom = 19.67498
scale = Vector2(0.05, 0.05)
text = "Options"

[node name="X" type="Button" parent="CanvasLayer/Opitions"]
offset_left = 13.025
offset_top = -7.325
offset_right = 40.775
offset_bottom = 23.675
scale = Vector2(0.1, 0.1)
text = "X"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87162, 6.0219)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.89255, 0)
script = ExtResource("2_cpk7c")

[node name="ForthSquare" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.89255, 0)
mesh = ExtResource("1_gyd0g")
skeleton = NodePath("../..")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.471811, 0.165512, 0, -0.165512, 0.471811, 0, 0, 0, 0.5, 0.943142, 1.71063, 3.16392)
texture = ExtResource("3_n8o6b")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(0.471811, 0.165512, 0, -0.165512, 0.471811, 0, 0, 0, 0.5, -0.71605, 2.06828, 3.14521)
flip_h = true
flip_v = true
texture = ExtResource("3_n8o6b")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n8o6b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.995453, 0, -0.0952552, 0, 1, 0, 0.0952552, 0, 0.995453, 0, 0, 0)

[node name="Untitled" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 23.8342, 0, -15.1378)
visible = false
mesh = ExtResource("4_2pnkx")
script = ExtResource("5_hwibk")

[node name="Untitled2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 48.801, -8.54561, -15.1378)
visible = false
mesh = ExtResource("4_2pnkx")
script = ExtResource("5_hwibk")

[node name="Untitled3" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 41.3974, 12.2104, -22.5914)
visible = false
mesh = ExtResource("4_2pnkx")
script = ExtResource("5_hwibk")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.89021, 0)
omni_attenuation = 10.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
stream = ExtResource("9_yg1ck")
autoplay = true
parameters/looping = true

[node name="Sprite3D3" type="Sprite3D" parent="."]
transform = Transform3D(0.171003, 0, 0.182368, 0, 0.25, 0, -0.182368, 0, 0.171003, -8.58997, 5.56157, -2.04054)
texture = ExtResource("11_eee13")

[node name="galaxys" type="Node" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="galaxys"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.407524, -333.88635)
amount = 1000
lifetime = 5.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_c6af1")
draw_pass_1 = SubResource("SphereMesh_8q4u3")

[connection signal="mouse_entered" from="CanvasLayer/ng" to="CanvasLayer" method="_on_ng_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ng" to="CanvasLayer" method="_on_ng_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/ng" to="CanvasLayer" method="_on_ng_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/continue" to="CanvasLayer" method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/continue" to="CanvasLayer" method="_on_continue_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/options" to="CanvasLayer" method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/options" to="CanvasLayer" method="_on_options_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/options" to="CanvasLayer" method="_on_options_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/credits" to="CanvasLayer" method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/credits" to="CanvasLayer" method="_on_credits_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/exit" to="CanvasLayer" method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/exit" to="CanvasLayer" method="_on_exit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/exit" to="CanvasLayer" method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Opitions/X" to="CanvasLayer" method="_on_x_pressed"]
